# Duo-Galym-Dauren-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  kotakbas  package-lock.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py  models.py
apps/api/app/api/: routes.py
apps/api/app/db/: database.py  tables.py
apps/api/app/providers/: gee.py
apps/api/app/services/: demo_store.py  pipeline_service.py  report_exports.py  workflow_store.py
apps/api/tests/: conftest.py  test_demo_store.py  test_pipeline_service.py  test_report_exports.py  test_routes.py
apps/web/: package.json
docs/: Saryna.pptx  backend-live-sync.md  contest-research.md  demo-script.md  final-submission-pack.md  pitch-qna-pack.md  project-brief.md  slide-copy-pack.md  slide-deck-outline.md  submission-form-pack.md
docs/brainstorms/: 2026-03-27-live-screening-evidence-layer-requirements.md  2026-03-27-map-evidence-visibility-requirements.md  2026-03-27-real-map-layer-requirements.md  2026-03-28-kazakhstan-wide-map-coverage-requirements.md  2026-04-08-report-export-design-requirements.md
docs/ideation/: 2026-03-27-map-layer-implementation-ideas.md  2026-03-27-p2-map-evidence-visibility-ideas.md  2026-04-08-report-export-design-ideation.md
docs/plans/: 2026-03-27-001-feat-hackathon-scope-completion-plan.md  2026-03-27-002-feat-live-screening-evidence-layer-plan.md  2026-03-27-003-feat-map-evidence-visibility-plan.md  2026-03-27-004-feat-real-map-layer-plan.md  2026-03-28-001-feat-kazakhstan-wide-map-coverage-plan.md  2026-04-08-001-feat-report-export-design-refresh-plan.md
(+9 files in other folders)
