[project]
name = "saryna-mrv-api"
version = "0.1.0"
description = "FastAPI backend scaffold for methane and flaring MRV workflow demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.110,<1.0",
  "earthengine-api>=1.0.0",
  "pydantic>=2.0,<3.0",
  "python-docx>=1.1,<2.0",
  "reportlab>=4.0,<5.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
